# gomoku

./: .gitignore  AI1.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  ChessClock.cpp  ChessClock.h  Doxyfile  Engine.cpp  Engine.h  Game.cpp  Game.h  GomokuDraw.cpp  GomokuDraw.h  IPlayer.cpp  IPlayer.h  Network.cpp  Network.h  README.md  author  brew.sh  install_dependencies.sh  main.cpp  test.cpp  test_server.cpp  tests.cpp  text  text.java  todo  todo.txt
Players/: AI1.cpp  AI1.h  AI2.cpp  AI2.h  Human.cpp  Human.h  IPlayer.cpp  IPlayer.h
imgui_little/: TextWithColors.hpp  imfilebrowser.hpp  imgui.h
pgnlib/: PGNMove.h  PGNPly.cpp
test_files/: board1.gg  board2.gg  board3.gg  board4.gg  board6.gg  script.py
test_files/free_fours/: c0_1.gg  c0_2.gg  c0_3.gg  c0_4.gg  c1_0.gg  c2_0.gg  c3_0.gg  c4_0.gg  d0_1.gg  d0_2.gg  d0_3.gg  d0_4.gg  d1_0.gg  d2_0.gg  d3_0.gg  d4_0.gg  r0_1.gg  r0_2.gg  r0_3.gg  r0_4.gg  r1_0.gg  r2_0.gg  r3_0.gg  r4_0.gg  random1_1.gg  random4_4.gg
test_files/free_threes/: c0_1.gg  c0_2.gg  c0_3.gg  c0_4.gg  c1_0.gg  c2_0.gg  c3_0.gg  c4_0.gg  d0_1.gg  d0_2.gg  d0_3.gg  d0_4.gg  d1_0.gg  d2_0.gg  d3_0.gg  d4_0.gg  r0_1.gg  r0_2.gg  r0_3.gg  r0_4.gg  r1_0.gg  r2_0.gg  r3_0.gg  r4_0.gg  random1_1.gg  random2_2.gg  random3_3.gg  random4_4.gg
test_files/half_fours/: c0_1.gg  c0_2.gg  c0_3.gg  c0_4.gg  c1_0.gg  c2_0.gg  c3_0.gg  c4_0.gg  d0_1.gg  d0_2.gg  d0_3.gg  d0_4.gg  d1_0.gg  d2_0.gg  d3_0.gg  d4_0.gg  r0_1.gg  r0_2.gg  r0_3.gg  r0_4.gg  r1_0.gg  r2_0.gg  r3_0.gg  r4_0.gg  random1_1.gg  random4_4.gg
test_files/half_threes/: c0_1.gg  c0_2.gg  c0_3.gg  c0_4.gg  c1_0.gg  c2_0.gg  c3_0.gg  c4_0.gg  d0_1.gg  d0_2.gg  d0_3.gg  d0_4.gg  d1_0.gg  d2_0.gg  d3_0.gg  d4_0.gg  r0_1.gg  r0_2.gg  r0_3.gg  r0_4.gg  r1_0.gg  r2_0.gg  r3_0.gg  r4_0.gg  random1_1.gg  random2_2.gg  random3_3.gg  random4_4.gg  random5_5.gg
textures/psd/: main.psd
